Adds initial HTMl Markup and main script file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,44 @@
     </aside>
 
     <main>
-
+        <div id="cardWrapper" class="card-wrapper">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">H2G2</h5>
+                    <p class="card-text">by Douglas Adams</p>
+                    <p><small>233 Pages</small></p>
+                    <button class="btn btn-sm btn-success me-2">Read</button>
+                    <button class="btn btn-sm btn-outline-danger me-2">Delete</button>
+                </div>
+                <div class="card-footer">
+                    <span>Read</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">H2G2</h5>
+                    <p class="card-text">by Douglas Adams</p>
+                    <p><small>233 Pages</small></p>
+                    <button class="btn btn-sm btn-success me-2">Read</button>
+                    <button class="btn btn-sm btn-outline-danger me-2">Delete</button>
+                </div>
+                <div class="card-footer">
+                    <span>Read</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">H2G2</h5>
+                    <p class="card-text">by Douglas Adams</p>
+                    <p><small>233 Pages</small></p>
+                    <button class="btn btn-sm btn-success me-2">Read</button>
+                    <button class="btn btn-sm btn-outline-danger me-2">Delete</button>
+                </div>
+                <div class="card-footer">
+                    <span>Read</span>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
