Add credential section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <h1>Project Library</h1>
-        <button class="btn btn-outline-dark">Add Book</button>
+        <!-- <button class="btn btn-outline-dark">Add Book</button> -->
     </header>
 
     <aside>
@@ -37,7 +37,7 @@
                 <input type="checkbox" id="read" name="read" class="form-check-input" value="read">
                 <label for="read" class="form-check-label">Read</label>
             </div> 
-            <button type="button" id="cancelButton" class="btn btn-secondary">Cancel</button>
+            <!-- <button type="button" id="cancelButton" class="btn btn-secondary">Cancel</button> -->
             <button type="submit" id="formSubmissionButton" class="btn btn-primary">Save</button>
         </form>
     </aside>
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        <p>Credentials</p>
+        <p>This page was created as part of The Odin Project curriculum (<a href="https://www.theodinproject.com/lessons/node-path-javascript-library">Project: Library | The Odin Project</a>) by Tanguy Freycon : <a href="https://github.com/OignonFugace/TOP__library">Visit Github Repository</a>.</p>
     </footer>
 
     
